crates/pasta_lua/tests/transpiler/snapshots/transpiler__snapshot_test__actor_word_definition.snap
---
source: crates/pasta_lua/tests/transpiler/snapshot_test.rs
expression: lua_code
---
local PASTA = require "pasta"
local GLOBAL = require "pasta.global"

do
    local ACTOR = PASTA.create_actor("さくら")
    ACTOR:create_word("一人称"):entry("私", "わたし", "あたし")
end

do
    local ACTOR = PASTA.create_actor("うにゅう")
    ACTOR:create_word("一人称"):entry("僕", "ぼく")
end

do
    local SCENE = PASTA.create_scene("メイン")

    function SCENE.__start__(act, ...)
        local args = { ... }
        local save, var = act:init_scene(SCENE)

        act:actor_proxy("さくら"):talk("「")
        act:actor_proxy("さくら"):talk(act:actor_proxy("さくら"):word("一人称は元気です"))
        act:actor_proxy("さくら"):talk("」")
        act:actor_proxy("うにゅう"):talk("「")
        act:actor_proxy("うにゅう"):talk(act:actor_proxy("うにゅう"):word("一人称も元気だよ"))
        act:actor_proxy("うにゅう"):talk("」")
    end
end
