crates/pasta_lua/tests/transpiler/snapshots/transpiler__snapshot_test__dynamic_call_global_var.snap
---
source: crates/pasta_lua/tests/transpiler/snapshot_test.rs
expression: lua_code
---
local PASTA = require "pasta"
local GLOBAL = require "pasta.global"

do
    local SCENE = PASTA.create_scene("メイン")

    function SCENE.__start__(act, ...)
        local args = { ... }
        local save, var = act:init_scene(SCENE)

        return act:call(SCENE.__global_name__, act:call_key(save.target, "save.target"), {}, table.unpack(args))
    end
end
