crates/pasta_lua/tests/transpiler/snapshots/transpiler__snapshot_test__sakura_script_action.snap
---
source: crates/pasta_lua/tests/transpiler/snapshot_test.rs
expression: lua_code
---
local PASTA = require "pasta"
local GLOBAL = require "pasta.global"

do
    local SCENE = PASTA.create_scene("メイン")

    function SCENE.__start__(act, ...)
        local args = { ... }
        local save, var = act:init_scene(SCENE)

        act:actor_proxy("さくら"):talk("「こんにちは」")
        act:actor_proxy("さくら"):sakura_script([[\n]])
        act:actor_proxy("さくら"):talk("「お元気ですか」")
    end
end
