crates/pasta_lua/tests/transpiler/snapshots/transpiler__snapshot_test__scene_with_word.snap
---
source: crates/pasta_lua/tests/transpiler/snapshot_test.rs
expression: lua_code
---
local PASTA = require "pasta"
local GLOBAL = require "pasta.global"

PASTA.create_word("挨拶"):entry("おはよう", "こんにちは", "こんばんは")
do
    local SCENE = PASTA.create_scene("メイン")

    function SCENE.__start__(act, ...)
        local args = { ... }
        local save, var = act:init_scene(SCENE)

        act:actor_proxy("さくら"):talk("「")
        act:actor_proxy("さくら"):talk(act:actor_proxy("さくら"):word("挨拶"))
        act:actor_proxy("さくら"):talk("！」")
    end
end
